# PhantomCore

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_kalman_decoder.cpp  bench_simd.cpp  bench_spike_detector.cpp
docs/: CODING_PRINCIPLES.md  DISTRIBUTION.md
examples/: closed_loop_sim.cpp  latency_benchmark.cpp  realtime_demo.cpp  spike_visualizer.cpp
include/: phantomcore.hpp
include/phantomcore/: adaptive_decoder.hpp  aligned_allocator.hpp  bandpass_filter.hpp  dimensionality_reduction.hpp  gpu_decoder.hpp  kalman_decoder.hpp  latency_tracker.hpp  model_checkpoint.hpp  neural_net_decoder.hpp  regularization.hpp  ring_buffer.hpp  simd_utils.hpp  spike_detector.hpp  stream_client.hpp  types.hpp
src/: adaptive_decoder.cpp  dimensionality_reduction.cpp  gpu_decoder.cpp  kalman_decoder.cpp  latency_tracker.cpp  model_checkpoint.cpp  neural_net_decoder.cpp  phantomcore.cpp  regularization.cpp  ring_buffer.cpp  simd_utils.cpp  spike_detector.cpp  stream_client.cpp
tests/: test_kalman_decoder.cpp  test_ring_buffer.cpp  test_simd_utils.cpp  test_spike_detector.cpp
